--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuales</li>
         <li>Docker: Creando containers</li>
-        <li>Ansible</li>
+        <li>Ansible: Su Infraestructura como código</li>
         <li>Integración continua: Madurez y Productividad en el Desarrollo de Software</li>
         <li>Kubernetes: Introducción a la orquestacion de containers</li>
     </ul>
